--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.8",
     "antd": "^5.22.1",
+    "antd-img-crop": "^4.23.0",
+    "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
